# android-Camera2Basic

Application/: CMakeLists.txt  build.gradle
Application/src/main/cpp/: ORBextractor.cc  cpu_arch.h  debug_log.h  find-homography.cpp  gles3jni.cpp  helper.hpp  image-quality.hpp  image-util-lib.cpp  imagetracker-jni.cpp  imagetracker.hpp  laplacian.hpp  neonorb.hpp  perf.h  util.hpp
Application/src/main/cpp/gms/: Header.h  gms_matcher.h
Application/src/main/java/com/example/android/camera2basic/: Camera2BasicFragment.java  CameraActivity.java  FindHomography.java  GLES3JNILib.java  GLES3JNIView.java  ImageTracker.java  OverlapView.java
Application/src/main/res/layout/: fragment_camera2_basic.xml
Application/src/main/res/layout-land/: fragment_camera2_basic.xml
bitplanes/arm64-v8a/include/bitplanes/core/: config.h  viz.h
bitplanes/arm64-v8a/include/bitplanes/core/internal/: v128.h
bitplanes/armeabi-v7a/include/bitplanes/core/: config.h
eigen3/arm64-v8a/share/pkgconfig/: eigen3.pc
eigen3/armeabi-v7a/share/pkgconfig/: eigen3.pc
opencv/arm64-v8a/sdk/native/jni/abi-/: OpenCVConfig.cmake  OpenCVModules-release.cmake
opencv/arm64-v8a/sdk/native/jni/include/opencv2/: cvconfig.h
opencv/armeabi-v7a/sdk/native/jni/abi-/: OpenCVModules-release.cmake  OpenCVModules.cmake
